asset/sass/_screen.scss
/* @group ----- Generic HTML Elements ----- */

* {
    box-sizing: border-box;
}

html {
    font-family: $body-font;
    font-size: $base-font-size;
    line-height: $base-line-height;
    margin: 0;
    padding: 0;
    font-weight: 400;
}

body {
    width: 100%;
}

h1, h2, h3, h4, h5, h6 {
    font-family: $heading-font;
    font-weight: normal;
}

h1 {
    font-size: 1.75 * $base-font-size;
    line-height: 2 * $base-line-height;
    margin: 0 0 $spacing-l;
}

h2 {
    font-size: 1.5 * $base-font-size;
    line-height: 2 * $base-line-height;
    margin: $spacing-l 0;
}

h3 {
    font-size: 1.25 * $base-font-size;
    line-height: $base-line-height;
    margin: $spacing-l 0;
}

h4 {
    margin: $spacing-l 0;
}

a {
    text-decoration: none;
    color: #000;
}

a img {
    vertical-align: bottom;
}

p a,
span a {
    background-color: $primary-color;
}

p,
ul {
    margin: $spacing-l 0;
}

    /* @group ----- Form Elements ----- */

    fieldset {
        border: 0;
        padding: 0;
    }

    input,
    textarea,
    button,
    select {
        font-family: $body-font;
        font-size: $base-font-size;
        line-height: $base-line-height;
        height: 1.5 * $base-line-height;
        margin: 0;
        border-radius: 0;
    }

    select {
        height: 1.5 * $base-line-height;
        appearance: none;
        padding: $spacing-s (1.25 * $spacing-l) $spacing-s $spacing-m;
        font-family: $body-font;
        border: 1px solid #ccc;
        border-radius: 3px;
        background: #fff url('../img/select-arrow.svg') right $spacing-m center no-repeat;
        background-size: .5 * $base-font-size;
    }

    input[type="text"],
    input[type="password"],
    input[type="email"],
    input[type="url"],
    input[type="number"],
    input[type="date"],
    input[type="datetime-local"],
    textarea {
        height: 1.5 * $base-line-height;
        appearance: none;
        border: 1px solid #ccc;
        background-color: #fff;
        padding: $spacing-s;
        border-radius: 0;
    }

    textarea {
        height: auto;
        min-height: 5 * $base-line-height;
    }

    .button,
    button,
    input[type="submit"] {
        appearance: none;
        padding: 0 $spacing-m;
        background-color: $primary-color;
        border: 3px solid #000;
        font-family: $heading-font;
        font-size: $base-font-size;
        line-height: 1.25 * $base-line-height;
        cursor: pointer;
    }

    [type="submit"] {
        margin: $spacing-l 0;
    }


    form .field {
        display: flex;
        flex-wrap: wrap;
        margin-bottom: $spacing-l;
        align-items: flex-start;
        width: 100%;
    }

    form .field.required .field-meta:after {
        content: "*";
    }

    form .field .field-meta,
    form .field label,
    form .field .label {
        font-family: $heading-font;
    }

    form .field .explanation,
    form .field .field-description {
        margin-bottom: $spacing-s;
    }

    form .field .field-meta {
        width: 25%;
        padding-right: $spacing-m;
    }

    form .field > .inputs {
        width: 75%;
        padding-left: $spacing-m;
    }

    form .field > .inputs .value {
        width: 100%;
    }

    form .field > .inputs .value:not(:first-of-type) {
        margin-top: 0;
        border-top: 0;
        padding-top: 0;
    }

    form .field > input[type="checkbox"] + label {
        width: auto;
        margin: 0 0 0 $spacing-s;
    }

    .expand:after,
    .collapse:after {
        font-family: 'Font Awesome 5 Free';
        font-weight: 900;
    }

    .expand:after {
        content: "\f0da";
    }

    .collapse:after {
        content: "\f0d7";
    }

    .expand + .collapsible {
        display: none;
    }

    .collapsible {
        font-weight: normal;
        font-size: .875 * $base-font-size;
        font-family: $body-font;
        line-height: .875 * $base-line-height;
        background-color: $lightgray;
        padding: $spacing-m $spacing-l;
        margin: $spacing-m 0;
    }

    .collapsible h4 {
        font-family: $body-font;
        font-size: .875 * $base-font-size;
        line-height: .875 * $base-line-height;
        font-weight: 900;
    }

    .collapsible .property:last-child,
    .collapsible .property:only-child {
        margin-bottom: 0;
    }

    /* @end */

    /* @group ----- Tables ----- */

    table {
        margin: (2 * $spacing-l) 0;
        width: 100%;
        border-collapse: separate;
        border-spacing: .5 * $spacing-s;
    }

    th:not(:empty) {
        background-color: #000;
        color: #ccc;
        text-align: left;
    }

    td,
    th {
        padding: $spacing-s $spacing-m;
    }

    td {
        background-color: #f7f7f7;
    }

    /* @end */

/* @end */

/* @group ----- Navigation ----- */

nav ul {
    list-style: none;
    padding-left: 0;
}

nav li {
    list-style-type: none;
    display: inline-block;
}

.secondary-nav ul {
    margin: 0 0 $spacing-l;
}

.secondary-nav li {
    display: inline-block;
}

.secondary-nav li a {
    background-color: $primary-color;
    font-family: $heading-font;
    color: #000;
    padding: $spacing-s $spacing-m;
    font-size: .75 * $base-font-size;
}

.breadcrumbs {
    margin-bottom: $spacing-l;
}

.breadcrumbs a {
    background-color: $primary-color;
}

.pagination {
    font-size: .75 * $base-font-size;
    font-family: $heading-font;
    margin: 0;
    padding: .25 * $base-line-height;
}

.pagination > * {
    display: inline-block;
}

.pagination form,
.pagination-buttons {
    margin-right: $spacing-s;
}

.pagination .inactive {
    display: none;
}

.pagination input[type="text"] {
    border: 2px solid #000;
    width: 2 * $spacing-l;
    text-align: center;
    height: 1.25 * $spacing-l;
    font-family: $heading-font;
    font-size: .75 * $base-font-size;
}
/* ... */

